--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
 </head>
 
 <body>
-    <h1>HTML TASK</h1>
     <table>
-        <thead>
-            <th>Task Name</th>
-            <th>Task Link</th>
-        </thead>
         <tbody>
 
     <h1>BOOTSTRAP TASK</h1>
@@ -42,37 +37,37 @@
                 <td>
                     Task 1
                 </td>
-                <td><a href="task1.html" target="_blank">task 1</a></td>
+                <td><a href="task1.html" target="_blank">Task 1</a></td>
             </tr>
             <tr>
                 <td>
                     Task 2
                 </td>
-                <td><a href="task2.html" target="_blank">task 2</a></td>
+                <td><a href="task2.html" target="_blank">Task 2</a></td>
             </tr>
             <tr>
                 <td>
                     Task 3
                 </td>
-                <td><a href="task3.html" target="_blank">task 3</a></td>
+                <td><a href="task3.html" target="_blank">Task 3</a></td>
             </tr>
             <tr>
                 <td>
                     Task 4
                 </td>
-                <td><a href="task4.html" target="_blank">task 4</a></td>
+                <td><a href="task4.html" target="_blank">Task 4</a></td>
             </tr>
             <tr>
                 <td>
                     Task 5
                 </td>
-                <td><a href="task5.html" target="_blank">task 5</a></td>
+                <td><a href="task5.html" target="_blank">Task 5</a></td>
             </tr>
             <tr>
                 <td>
                     Task 6
                 </td>
-                <td><a href="task6.html" target="_blank">task 6</a></td>
+                <td><a href="task6.html" target="_blank">Task 6</a></td>
             </tr>
         </tbody>
     </table>
