--- a/task2.html
+++ b/task2.html
@@ -8,7 +8,7 @@
         <meta content="Construction Company Website Template" name="description">
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
+        <link href="favicon.ico" rel="icon">
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -37,7 +37,7 @@
                             <div class="logo">
                                 <a href="index.html">
                                     <h1>Builderz</h1>
-                                    <!-- <img src="img/logo.jpg" alt="Logo"> -->
+                                    <!-- <img src="logo.jpg" alt="Logo"> -->
                                 </a>
                             </div>
                         </div>
@@ -127,7 +127,7 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/carousel-1.jpg" alt="Carousel Image">
+                        <img src="carousel-1.jpg" alt="Carousel Image">
                         <div class="carousel-caption">
                             <p class="animated fadeInRight">We Are Professional</p>
                             <h1 class="animated fadeInLeft">For Your Dream Project</h1>
@@ -136,7 +136,7 @@
                     </div>
 
                     <div class="carousel-item">
-                        <img src="img/carousel-2.jpg" alt="Carousel Image">
+                        <img src="carousel-2.jpg" alt="Carousel Image">
                         <div class="carousel-caption">
                             <p class="animated fadeInRight">Professional Builder</p>
                             <h1 class="animated fadeInLeft">We Build Your Home</h1>
@@ -145,7 +145,7 @@
                     </div>
 
                     <div class="carousel-item">
-                        <img src="img/carousel-3.jpg" alt="Carousel Image">
+                        <img src="carousel-3.jpg" alt="Carousel Image">
                         <div class="carousel-caption">
                             <p class="animated fadeInRight">We Are Trusted</p>
                             <h1 class="animated fadeInLeft">For Your Dream Home</h1>
