--- a/index.html
+++ b/index.html
@@ -24,6 +24,63 @@
 
 <body>
     <table>
+        <h1>JS TASK</h1>
+    <table>
+        <thead>
+            <th>Task Name</th>
+            <th>Task Link</th>
+        </thead>
+             <tbody>
+            <tr>
+                <td>
+                    Task 1
+                </td>
+                <td><a href="js1.html" target="_blank">task 1</a></td>
+            </tr>
+            <tr>
+                <td>
+                    Task 2
+                </td>
+                <td><a href="js2.html" target="_blank">task 2</a></td>
+            </tr>
+            <tr>
+                <td>
+                    Task 3
+                </td>
+                <td><a href="js3.html" target="_blank">task 3</a></td>
+            </tr>
+            <tr>
+                <td>
+                    Task 4
+                </td>
+                <td><a href="js4.html" target="_blank">task 4</a></td>
+            </tr>
+            <tr>
+                <td>
+                    Task 5
+                </td>
+                <td><a href="js5.html" target="_blank">task 5</a></td>
+            </tr>
+            <tr>
+                <td>
+                    Task 6
+                </td>
+                <td><a href="js6.html" target="_blank">task 6</a></td>
+            </tr>
+            <tr>
+                <td>
+                    Task 7
+                </td>
+                <td><a href="js7.html" target="_blank">task 7</a></td>
+            </tr>
+            <tr>
+                <td>
+                    Task 8
+                </td>
+                <td><a href="js8.html" target="_blank">task 8</a></td>
+            </tr>
+        </tbody>
+    </table>
         <tbody>
 
     <h1>BOOTSTRAP TASK</h1>
